--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Registro de Asistencias
 APP_ENV=local
 APP_KEY=base64:chIUonT1R/UR1MJBOpJUpr5UdN5JnBRFcyAk//Yaa4s=
 APP_DEBUG=true
